<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!--
         Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
         It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
         or something similar.
    -->
    <string name="app_name">Sunshine</string>

    <!--
         By convention, "action" denotes that this String will be used as the label for an Action,
         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
    -->
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <!--Label for icon/art pack preference [CHAR LIMIT=30] -->
    <string name="pref_icon_packs_title">Icon Packs</string>

    <!--Key name for storing icon packs in Shared Preferences [CHAR LIMIT=NONE] -->
    <string name="pref_icon_packs_key" translatable="false">icon_pack</string>

    <!--Label for colored option in icon packs preference [CHAR LIMIT=25] -->
    <string name="pref_icon_packs_label_colored">Colored</string>

    <!--Label for mono option in icon packs preference [CHAR LIMIT=25] -->
    <string name="pref_icon_packs_label_mono">Mono</string>

    <!--Value in SharedPreferences for colored icon pack option [CHAR LIMIT=NONE] -->
    <string name="pref_icon_packs_colored" translatable="false">https://github.com/udacity/sunshine_icons/blob/master/Archive/Colored/art_%s.png?raw=true</string>

    <!--Value in SharedPreferences for mono icon pack option [CHAR LIMIT=NONE] -->
    <string name="pref_icon_packs_mono" translatable="false">https://github.com/udacity/sunshine_icons/blob/master/Archive/Mono/art_%s.png?raw=true</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>


    <!--Strings for fomatting weather related data-->

    <!--Temperature format [CHAR LIMIT = 5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!--Wind speed format-->
    <!-- Label for wind -->
    <string name="wind">Wind</string>
    <!--Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph"><xliff:g id="speed">%1$1.0f</xliff:g>mph
    <xliff:g id="direction">%2$s</xliff:g></string>

    <!--Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kph"><xliff:g id="speed">%1$1.0f</xliff:g>km/h
    <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Label for pressure -->
    <string name="pressure">Pressure</string>
    <!--Pressure format [CHAR LIMIT=25] -->
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Label for humidity -->
    <string name="humidity">Humidity</string>
    <!--Humidity format [CHAR LIMIT=25] -->
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>


    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!--Notification format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g>
        High: <xliff:g id="high">%2$s</xliff:g>
        Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!--String related to notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!--Strings related to notification enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!--String to display when no weather data is available -->
    <string name="no_weather_information">No Weather Information Available.</string>
    <!--String to display when no network is available-->
    <string name="no_network_available">No Weather Information Available. The network is not available to fetch data.</string>

    <!--String used as a key for shared preferences for storing the result of last sync operation-->
    <string name="key_location_status">location-status</string>

    <!--Strings representing information corresponding to different server status-->
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>

    <!--String representing information when invalid location is set in the preferences-->
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>

    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>


    <!--String resource for accessibility service (a11y) -->
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_temp_high">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_temp_low">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>

    <!-- Used to form a severe weather alert that reads "Heads up: <weather> in <location>!" -->
    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>

</resources>
